[gd_scene load_steps=6 format=3 uid="uid://bwuhh53cr4b0x"]

[ext_resource type="Script" path="res://Gundam project/Code/zaku_gun.gd" id="1_6ns8k"]
[ext_resource type="PackedScene" uid="uid://bf0gw7eg3f6f0" path="res://Gundam project/Scenes/Bullet.tscn" id="2_mcwq3"]
[ext_resource type="Texture2D" uid="uid://d2i733ayvuwhl" path="res://Gundam project/Sprites/zk_gun_aim.png" id="3_d8pmm"]
[ext_resource type="AudioStream" uid="uid://d0qe22e0otnx8" path="res://Gundam project/SFX/burst sound.wav" id="4_ltjew"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rnkvp"]
radius = 264.008

[node name="zaku_gun" type="Node2D"]
position = Vector2(-21, 19)
script = ExtResource("1_6ns8k")
Bullet = ExtResource("2_mcwq3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(129, 0)
texture = ExtResource("3_d8pmm")

[node name="Gun_direction" type="Marker2D" parent="."]
position = Vector2(258, 0)

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(51, 0)

[node name="main_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="shot_timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_rnkvp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ltjew")
volume_db = -30.0

[connection signal="timeout" from="main_timer" to="." method="_on_main_timer_timeout"]
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
